<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.krito.io.oscar.activities.RegistrationActivity">

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/registerResultView"
            android:background="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:text="Error Registering you"
            android:textAlignment="center"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            />

        <ProgressBar
            android:id="@+id/registerProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_below="@+id/registerResultView"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/nameTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/nameTextLayout"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/addressTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/addressView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_hint"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/addressTextLayout"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/mobileTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mobileView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_hint"
                    android:inputType="phone"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/mobileTextLayout"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/emailTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/emailTextLayout"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/passwordTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/passwordTextLayout"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/rePasswordTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/rePasswordView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_password"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_below="@id/rePasswordTextLayout"
                android:id="@+id/registerButton"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/haveAccountView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/registerButton"
                android:layout_marginTop="10dp"
                android:text="@string/have_account"
                android:textColor="@android:color/black"
                />


        </RelativeLayout>

    </RelativeLayout>
</ScrollView>

